--- a/src/main/resources/config-localhost.properties
+++ b/src/main/resources/config-localhost.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.validationQuery=SELECT 1
-jdbc.url=jdbc:mysql://192.168.60.96:3306/itm?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/itm?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=iflytek
+jdbc.password=shao10908
