--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,5 +63,10 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <!-- session 过期时间 分钟 -->
+    <session-config>
+        <session-timeout>1</session-timeout>
+    </session-config>
+
 
 </web-app>
