--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>iflytek.voicecloud</groupId>
-    <artifactId>itm-web-service</artifactId>
+    <artifactId>itm-web-config</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <modules>
+        <module>../itm-analysis</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
