--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>iflytek.voicecloud</groupId>
     <artifactId>itm-web-config</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
