--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,13 @@
             <version>3.4</version>
         </dependency>
 
+        <!-- ftp包工具类 -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-ftp</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
