--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,9 +11,9 @@
 
     <context-param>
         <param-name>spring.profiles.active</param-name>
-        <!--<param-value>production</param-value>-->
+        <param-value>production</param-value>
         <!-- <param-value>develop</param-value> -->
-         <param-value>localhost</param-value>
+         <!--<param-value>localhost</param-value>-->
     </context-param>
     <!-- Spring配置文件 -->
     <context-param>
@@ -74,7 +74,7 @@
 
     <!-- session 过期时间 分钟 -->
     <session-config>
-        <session-timeout>15</session-timeout>
+        <session-timeout>30</session-timeout>
     </session-config>
 
 </web-app>
