--- a/src/main/resources/config-develop.properties
+++ b/src/main/resources/config-develop.properties
@@ -3,3 +3,8 @@ jdbc.validationQuery=SELECT 1
 jdbc.url=jdbc:mysql://172.16.154.106:3306/itm?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=imsp_vcloud
+
+jdbc.analysis_url = jdbc:mysql://172.16.154.106:3306/itm_analysis?useUnicode=true&characterEncoding=UTF-8
+jdbc.analysis_username=root
+jdbc.analysis_password=xylx1.t!@#
+jdbc.analysis_validationQuery=SELECT 1
