--- a/src/main/resources/config-production.properties
+++ b/src/main/resources/config-production.properties
@@ -3,3 +3,8 @@ jdbc.validationQuery=SELECT 1
 jdbc.url=jdbc:mysql://192.168.60.96:3306/itm?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=iflytek
+
+jdbc.analysis_url = jdbc:mysql://192.168.60.96:3306/itm_analysis?useUnicode=true&characterEncoding=UTF-8
+jdbc.analysis_username=root
+jdbc.analysis_password=iflytek
+jdbc.analysis_validationQuery=SELECT 1
